# StakkenTrue

./: .clang-tidy  .gitignore  CMakeLists.txt  readme.md  vcpkg.json
Resources/Music/: _uda_ - uda talks to me.s3m
Source/: CMakeLists.txt
Source/Client/: Application.cpp  Application.h  CMakeLists.txt  File.cpp  File.h  Music.cpp  Music.hpp  View.cpp  View.hpp  main.cpp
Source/Client/Assets/: AssetCache.hpp  Assets.cpp  Assets.hpp  Font.cpp  Font.hpp  MsdfFont.cpp  MsdfFont.hpp  SimpleAtlas.hpp  Texture.cpp  Texture.hpp
Source/Client/Audio/: Audio.cpp  Audio.hpp  Music.cpp  Music.hpp  Sounds.cpp  Sounds.hpp
Source/Client/Draw/: Background.cpp  Background.hpp  Draw.hpp  Framebuffer.cpp  Framebuffer.hpp  Line.cpp  Line.hpp  Quad.cpp  Quad.hpp  Shader.cpp  Shader.hpp  Text.cpp  Text.hpp  Viewport.cpp  Viewport.hpp
Source/Client/Game/: Color.cpp  Color.hpp  ColorPallete.hpp  DrawGame.cpp  DrawGame.hpp
Source/Client/Input/: Gamepad.cpp  Gamepad.hpp  IController.hpp  Input.hpp  Keyboard.cpp  Keyboard.hpp
Source/Client/UI/: Components.cpp  Components.hpp  Node.cpp  Node.hpp  UI.cpp  UI.hpp
Source/Core/: CMakeLists.txt
Source/Core/Game/: EventBuffer.cpp  EventBuffer.hpp  Game.cpp  Game.hpp  GameEvent.hpp  GameInput.hpp  GameRules.hpp  Lobby.hpp  Pieces.cpp  Pieces.hpp  Player.cpp  Player.hpp
Source/Core/Randomizers/: Randomizer.hpp  Randomizers.hpp  SevenBag.cpp  SevenBag.hpp  XoroshiroRandomizer.cpp  XoroshiroRandomizer.hpp
Source/Include/: defines.h  stb_image.h  stb_truetype.h  stb_wrapper.h
Source/Server/: CMakeLists.txt
